# LabaSoprGrad

./: CMakeLists.txt  main.cpp
